cambios realizados con nuevas funciones